# release_practice

./: README.md  pyproject.toml
.github/workflows/: wheels.yml  wheels2.yml
cpp_ext/: CMakeLists.txt  README.md  pyproject.toml
cpp_ext/src/: nanobind_example_ext.cpp
src/: nanobind_example_ext.cpp
